--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Bonjour/Zeroconf implementation in TypeScript",
   "main": "./dist/index.js",
   "dependencies": {
+    "@types/multicast-dns": "^7.2.1",
     "array-flatten": "^2.1.2",
     "dns-equal": "^1.0.0",
     "fast-deep-equal": "^3.1.3",
